# tls-sig-api

./: README.md
cpp/: CMakeLists.txt
cpp/src/: tls_token.cpp  tls_token.h
cpp/tool/: gen_token.cpp  verify_token.cpp
go/: README.md  go.mod  tls_sig_api_test.go
go/tls_sig_api/: tls_sig_api.go  tls_sig_api_test.go
go/tls_sig_api/tool/: gen_token.go
go/tool/: parse_token.go  verify_token.go
